--- a/README
+++ b/README
@@ -1,11 +1,17 @@
-slidezone is a slider with customizable effects, jQuery plug-in.
-I developed it to use on my Uygulama and Kukimuki projects.
+slidezone is an image slider jQuery plug-in.
+It has customizable animations/effects. You can change animations/effects with plug-in options easily.
+slidezone reads all dimension values from CSS and the plug-in's options doesn't have any dimension values.
+
+I developed it to use on my Uygulama project's new version.
 
 I've only tested it on 
- * Google Chrome (11.0.696.65), 
- * Chromium (11.0.696.71 (86024) Ubuntu 11.04), 
- * Mozilla Firefox (4.0.1), 
- * Opera (11.10 (2092)) 
+  * Chromium (14.0.835.202), 
+  * Google Chrome (15.0.874.120), 
+  * Mozilla Firefox (3.6.17), 
+  * Opera (11.52) 
 and it works enough for me for now!
+
+It is under MIT License.
+
 
 goker.cebeci, the developer
